[arc notifications] Inspect pinned flag directly for IsPinned().

When an ARC notification comes, the 'discard notifications' button in
the notifications tray is greyed out until you hover over the
notification. ArcCustomNotificationView::ContentViewDelegate would
check whether ArcCustomNotificationView::floating_close_button_ existed
to determine if the notification is pinned or not. Pinned notifications
cannot be closed. The floating close button is created if the notification
is not pinned. However, it is created after the check inside
ContentViewDelegate. Instead, inspect the pinned state directly from
ArcCustomNotificationItem.

BUG=685467

Review-Url: https://codereview.chromium.org/2670493002
Cr-Commit-Position: refs/heads/master@{#447698}

Former-commit-id: 581285b278ce65ddf216a03295333bd396239c03